--- a/home.html
+++ b/home.html
@@ -3,13 +3,13 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40501021-24"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6C54VBEDHG"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-40501021-24');
+    gtag('config', 'G-6C54VBEDHG');
     </script>
 
     <meta charset="utf-8">
